--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/Jansenck/taskme#readme",
   "dependencies": {
-    "@types/express": "^4.17.14",
     "chalk": "^5.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -30,5 +29,9 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "typescript": "^4.8.4"
   }
 }
